Use portable physical clamping